Inherits transform not taken into account #52022

Closed
opened 2017-07-11 12:03:23 +02:00 by Maxime Robinot · 5 comments

System Information
Centos 6.5, Quadro K4200

Blender Version
2.78 d5d7d45

Short description of error
When loading a hierarchy with one inheritsTransform set to false on one item, the items under still get the transformations of parents upper. See attached simple alembic file.

Exact steps for others to reproduce the error
Import attached alembic file.
Hierarchy:

locator1 (translate: 1, 0, 0, inheritsTransform: true)
  locator2 (translate: 0, 2, 0, inheritsTransform: false)
    locatorShape2

testInheritsTransform.abc

**System Information** Centos 6.5, Quadro K4200 **Blender Version** 2.78 d5d7d45 **Short description of error** When loading a hierarchy with one inheritsTransform set to false on one item, the items under still get the transformations of parents upper. See attached simple alembic file. **Exact steps for others to reproduce the error** Import attached alembic file. Hierarchy: ``` locator1 (translate: 1, 0, 0, inheritsTransform: true) locator2 (translate: 0, 2, 0, inheritsTransform: false) locatorShape2 ``` [testInheritsTransform.abc](https://archive.blender.org/developer/F658215/testInheritsTransform.abc)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @maxime.robinot

Added subscriber: @maxime.robinot
Sybren A. Stüvel was assigned by Bastien Montagne 2017-07-11 14:10:36 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

This issue was referenced by 32edfd53d9

This issue was referenced by 32edfd53d978b34c9eb528e705f29e3feb673d37

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52022
No description provided.