source/blender/alembic/intern/abc_object.h
@@ -143,6 +143,8 @@ protected:
 	 * modifiers and/or constraints. */
 	int m_refcount;
 
+	bool m_inherits_xform;
+
 public:
 	AbcObjectReader *parent_reader;
 
@@ -167,6 +169,7 @@ public:
 	const std::string & name() const { return m_name; }
 	const std::string & object_name() const { return m_object_name; }
 	const std::string & data_name() const { return m_data_name; }
+	bool inherits_xform() const { return m_inherits_xform; }
 
 	virtual bool valid() const = 0;
 	virtual bool accepts_object_type(const Alembic::AbcCoreAbstract::ObjectHeader &alembic_header,
@@ -194,6 +197,9 @@ public:
 
 	void read_matrix(float r_mat[4][4], const float time,
 	                 const float scale, bool &is_constant);
+
+protected:
+	void determine_inherits_xform();
 };
 
 Imath::M44d get_matrix(const Alembic::AbcGeom::IXformSchema &schema, const float time);
